--- a/week5/bin/view/final.fxml
+++ b/week5/bin/view/final.fxml
@@ -59,17 +59,17 @@
 								<Insets right="5.0" />
 							</GridPane.margin>
 						</Label>
-						<TextField prefHeight="25.0" prefWidth="200.0" GridPane.columnIndex="1">
+						<TextField fx:id="tfStudentId" prefHeight="25.0" prefWidth="200.0" GridPane.columnIndex="1">
 							<GridPane.margin>
 								<Insets left="10.0" right="30.0" />
 							</GridPane.margin>
 						</TextField>
-						<TextField prefHeight="25.0" prefWidth="423.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+						<TextField fx:id="tfLastName" prefHeight="25.0" prefWidth="423.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
 							<GridPane.margin>
 								<Insets left="10.0" right="30.0" />
 							</GridPane.margin>
 						</TextField>
-						<TextField GridPane.columnIndex="1" GridPane.rowIndex="2">
+						<TextField fx:id="tfFirstName" GridPane.columnIndex="1" GridPane.rowIndex="2">
 							<GridPane.margin>
 								<Insets left="10.0" right="30.0" />
 							</GridPane.margin>
@@ -89,32 +89,32 @@
 								<Insets right="5.0" />
 							</GridPane.margin>
 						</Label>
-						<TextField GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="1">
+						<TextField fx:id="tfAddress" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="1">
 							<GridPane.margin>
 								<Insets left="10.0" right="30.0" />
 							</GridPane.margin>
 						</TextField>
-						<TextField GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="2">
+						<TextField fx:id="tfPhoneNumber" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="2">
 							<GridPane.margin>
 								<Insets left="10.0" right="30.0" />
 							</GridPane.margin>
 						</TextField>
-						<Button mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Thêm học sinh" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.halignment="CENTER">
+						<Button fx:id="btnAddStudent" mnemonicParsing="false" onAction="#addStudent" prefHeight="25.0" prefWidth="100.0" text="Thêm học sinh" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.halignment="CENTER">
 							<GridPane.margin>
 								<Insets left="10.0" right="10.0" />
 							</GridPane.margin>
 						</Button>
-						<Button mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Xoá học sinh" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+						<Button fx:id="btnDeleteStudent" mnemonicParsing="false" onAction="#deleteStudent" prefHeight="25.0" prefWidth="100.0" text="Xoá học sinh" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1">
 							<GridPane.margin>
 								<Insets left="10.0" right="10.0" />
 							</GridPane.margin>
 						</Button>
-						<Button mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Sửa học sinh" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+						<Button fx:id="btnUpdateStudent" mnemonicParsing="false" onAction="#updateStudent" prefHeight="25.0" prefWidth="100.0" text="Sửa học sinh" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="2">
 							<GridPane.margin>
 								<Insets left="10.0" right="10.0" />
 							</GridPane.margin>
 						</Button>
-						<ChoiceBox prefWidth="484.0" GridPane.columnIndex="3">
+						<ChoiceBox fx:id="cbGender" prefWidth="484.0" GridPane.columnIndex="3">
 							<opaqueInsets>
 								<Insets />
 							</opaqueInsets>
@@ -131,15 +131,15 @@
 		</BorderPane>
 	</top>
 	<center>
-		<TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+		<TableView fx:id="tvStudent" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
 			<columns>
-            <TableColumn fx:id="number" prefWidth="86.0" text="STT" />
-				<TableColumn fx:id="studentId" minWidth="0.0" prefWidth="125.0" text="MSSV" />
-				<TableColumn fx:id="lastName" minWidth="0.0" prefWidth="128.0" text="Họ đệm" />
-				<TableColumn fx:id="firstName" prefWidth="107.0" text="Tên" />
-				<TableColumn fx:id="gender" minWidth="0.0" prefWidth="90.0" text="Giới tính" />
-				<TableColumn fx:id="address" minWidth="0.0" prefWidth="208.0" text="Địa chỉ" />
-				<TableColumn fx:id="phoneNumber" prefWidth="191.0" text="Số điện thoại" />
+            <TableColumn fx:id="tcNumber" prefWidth="86.0" text="STT" />
+				<TableColumn fx:id="tcStudentId" minWidth="0.0" prefWidth="125.0" text="MSSV" />
+				<TableColumn fx:id="tcLastName" minWidth="0.0" prefWidth="128.0" text="Họ đệm" />
+				<TableColumn fx:id="tcFirstName" prefWidth="107.0" text="Tên" />
+				<TableColumn fx:id="tcGender" minWidth="0.0" prefWidth="90.0" text="Giới tính" />
+				<TableColumn fx:id="tcAddress" minWidth="0.0" prefWidth="208.0" text="Địa chỉ" />
+				<TableColumn fx:id="tcPhoneNumber" prefWidth="191.0" text="Số điện thoại" />
 			</columns>
 			<columnResizePolicy>
 				<TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
