--- a/project/MoneyGrower/src/application/main.fxml
+++ b/project/MoneyGrower/src/application/main.fxml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="825.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="825.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <center>
       <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="550.0" side="LEFT" style="-fx-tab-min-height: 70; -fx-tab-max-height: 70;" stylesheets="@app.css" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
         <tabs>
@@ -30,7 +36,90 @@
             </Tab>
             <Tab text="👤">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <GridPane alignment="CENTER" hgap="10.0" layoutX="133.0" layoutY="232.0" prefHeight="234.0" prefWidth="200.0" vgap="20.0" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <columnConstraints>
+                            <ColumnConstraints />
+                            <ColumnConstraints />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="120.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" />
+                          </columnConstraints>
+                          <rowConstraints>
+                              <RowConstraints />
+                            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label text="Người dùng:" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                                 <font>
+                                    <Font name="System Bold" size="20.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Tài khoản:" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                                 <font>
+                                    <Font name="System Bold" size="20.0" />
+                                 </font>
+                              </Label>
+                              <VBox prefHeight="103.0" prefWidth="300.0" spacing="15.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="4">
+                                 <children>
+                                    <Button mnemonicParsing="false" onAction="#handleCapNhatNguoiDung" prefWidth="5000.0" style="-fx-border-color: transparent; -fx-background-color: #228B22; -fx-background-radius: 10;" text="Cập nhật" textFill="WHITE">
+                                       <font>
+                                          <Font name="System Bold" size="18.0" />
+                                       </font>
+                                    </Button>
+                                    <Button mnemonicParsing="false" onAction="#handleDangXuat" prefHeight="41.0" prefWidth="5000.0" style="-fx-border-color: transparent; -fx-background-color: brown; -fx-background-radius: 10;" text="Đăng xuất" textFill="WHITE">
+                                       <font>
+                                          <Font name="System Bold" size="18.0" />
+                                       </font>
+                                    </Button>
+                                 </children>
+                                 <GridPane.margin>
+                                    <Insets top="15.0" />
+                                 </GridPane.margin>
+                              </VBox>
+                              <Label fx:id="lbNguoiDung" text="?" GridPane.columnIndex="3" GridPane.rowIndex="2">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="lbTaiKhoan" text="?" GridPane.columnIndex="3" GridPane.rowIndex="3">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Label>
+                              <Label text="THÔNG TIN NGƯỜI DÙNG" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="1">
+                                 <font>
+                                    <Font name="System Bold" size="24.0" />
+                                 </font>
+                              </Label>
+                              <Separator prefWidth="200.0" GridPane.columnIndex="2" GridPane.columnSpan="2">
+                                 <GridPane.margin>
+                                    <Insets bottom="10.0" left="-40.0" right="-40.0" />
+                                 </GridPane.margin>
+                              </Separator>
+                              <Separator orientation="VERTICAL" prefHeight="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="4">
+                                 <GridPane.margin>
+                                    <Insets bottom="-50.0" right="10.0" top="-50.0" />
+                                 </GridPane.margin>
+                              </Separator>
+                              <Separator orientation="VERTICAL" prefHeight="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1" GridPane.rowSpan="4">
+                                 <GridPane.margin>
+                                    <Insets bottom="-50.0" left="10.0" top="-50.0" />
+                                 </GridPane.margin>
+                              </Separator>
+                              <Separator prefWidth="200.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="5">
+                                 <GridPane.margin>
+                                    <Insets left="-40.0" right="-40.0" top="10.0" />
+                                 </GridPane.margin>
+                              </Separator>
+                           </children>
+                        </GridPane>
+                     </children></AnchorPane>
                </content>
             </Tab>
         </tabs>
@@ -41,12 +130,12 @@
          <children>
             <HBox alignment="CENTER" layoutX="100.0" layoutY="10.0" spacing="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
                <children>
-                  <Label text="🌏 TỔNG CỘNG:" textFill="WHITE">
+                  <Label text="🌏 SỐ DƯ:" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="28.0" />
                      </font>
                   </Label>
-                  <Label text="500,000,000,000 VND" textFill="WHITE">
+                  <Label fx:id="lbSoDu" text="500,000,000,000 VND" textFill="WHITE">
                      <font>
                         <Font size="28.0" />
                      </font>
