--- a/project/MoneyGrower/src/application/main.fxml
+++ b/project/MoneyGrower/src/application/main.fxml
@@ -27,14 +27,23 @@
                      <children>
                         <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <top>
-                              <Label text="SỔ GIAO DỊCH" textFill="FORESTGREEN" BorderPane.alignment="CENTER">
-                                 <font>
-                                    <Font name="System Bold" size="36.0" />
-                                 </font>
+                              <HBox alignment="CENTER" spacing="25.0" BorderPane.alignment="CENTER">
                                  <BorderPane.margin>
                                     <Insets bottom="20.0" top="20.0" />
                                  </BorderPane.margin>
-                              </Label>
+                                 <children>
+                                    <Label text="SỔ GIAO DỊCH" textFill="FORESTGREEN">
+                                       <font>
+                                          <Font name="System Bold" size="36.0" />
+                                       </font>
+                                    </Label>
+                                    <Button mnemonicParsing="false" onAction="#handleThemGiaoDich" style="-fx-background-radius: 30; -fx-background-color: white; -fx-border-color: forestgreen; -fx-border-radius: 30; -fx-border-width: 2;" text="THÊM" textAlignment="CENTER" textFill="FORESTGREEN">
+                                       <font>
+                                          <Font name="System Bold" size="20.0" />
+                                       </font>
+                                    </Button>
+                                 </children>
+                              </HBox>
                            </top>
                            <right>
                               <ScrollPane hbarPolicy="NEVER" style="-fx-background-color: transparent;" vbarPolicy="ALWAYS" BorderPane.alignment="CENTER">
@@ -188,21 +197,16 @@
    <top>
       <AnchorPane prefHeight="85.0" prefWidth="550.0" style="-fx-background-color: #228B22;" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="52.0" layoutY="19.0" text="💰 MONEY GROWER" textFill="WHITE">
+            <Label layoutX="104.0" layoutY="20.0" text="💰 MONEY GROWER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="30.0" />
                </font>
             </Label>
-            <Label layoutX="340.0" layoutY="20.0" prefHeight="58.0" prefWidth="40.0" style="-fx-scale-x: -1; -fx-rotate: -45;" text="🍃" textFill="WHITE">
+            <Label layoutX="392.0" layoutY="21.0" prefHeight="58.0" prefWidth="40.0" style="-fx-scale-x: -1; -fx-rotate: -45;" text="🍃" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="40.0" />
                </font>
             </Label>
-            <Button layoutX="411.0" layoutY="20.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="95.0" style="-fx-background-radius: 30; -fx-background-color: white;" text="THÊM" textAlignment="CENTER" textFill="FORESTGREEN">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-            </Button>
          </children>
       </AnchorPane>
    </top>
