--- a/project/MoneyGrower/src/application/main.fxml
+++ b/project/MoneyGrower/src/application/main.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,7 +21,7 @@
 
 <BorderPane prefHeight="825.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <center>
-      <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="550.0" side="LEFT" style="-fx-tab-min-height: 70; -fx-tab-max-height: 70;" stylesheets="@app.css" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+      <TabPane id="tpMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="550.0" side="LEFT" style="-fx-tab-min-height: 70; -fx-tab-max-height: 70;" stylesheets="@app.css" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
         <tabs>
           <Tab style="-fx-pref-width: 70;" text="💰">
             <content>
@@ -27,7 +29,7 @@
                      <children>
                         <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <top>
-                              <HBox alignment="CENTER" spacing="25.0" BorderPane.alignment="CENTER">
+                              <HBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
                                  <BorderPane.margin>
                                     <Insets bottom="20.0" top="20.0" />
                                  </BorderPane.margin>
@@ -64,12 +66,94 @@
           </Tab>
           <Tab text="📊">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <BorderPane layoutX="60.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <top>
+                              <VBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
+                                 <BorderPane.margin>
+                                    <Insets top="20.0" />
+                                 </BorderPane.margin>
+                                 <children>
+                                    <Label alignment="CENTER" text="THỐNG KÊ THÁNG" textFill="FORESTGREEN">
+                                       <font>
+                                          <Font name="System Bold" size="36.0" />
+                                       </font>
+                                    </Label>
+                                    <HBox alignment="CENTER" spacing="20.0">
+                                       <children>
+                                          <Spinner fx:id="snThangTK" prefHeight="25.0" prefWidth="89.0" style="-fx-font-size: 16;" />
+                                          <Label text="/">
+                                             <font>
+                                                <Font size="28.0" />
+                                             </font>
+                                          </Label>
+                                          <Spinner fx:id="snNamTK" prefHeight="25.0" prefWidth="112.0" style="-fx-font-size: 16;" />
+                                       </children>
+                                    </HBox>
+                                    <HBox alignment="CENTER" prefHeight="50.0" prefWidth="478.0" spacing="15.0">
+                                       <children>
+                                          <Button mnemonicParsing="false" onAction="#handleThongKeTongThu" prefHeight="41.0" prefWidth="120.0" style="-fx-border-color: transparent; -fx-background-color: #228B22; -fx-background-radius: 10;" text="TỔNG THU" textFill="WHITE">
+                                             <font>
+                                                <Font name="System Bold" size="18.0" />
+                                             </font>
+                                          </Button>
+                                          <Button mnemonicParsing="false" onAction="#handleThongKeTongChi" prefHeight="41.0" prefWidth="120.0" style="-fx-border-color: transparent; -fx-background-color: brown; -fx-background-radius: 10;" text="TỔNG CHI" textFill="WHITE">
+                                             <font>
+                                                <Font name="System Bold" size="18.0" />
+                                             </font>
+                                          </Button>
+                                       </children>
+                                       <VBox.margin>
+                                          <Insets top="10.0" />
+                                       </VBox.margin>
+                                    </HBox>
+                                 </children>
+                              </VBox>
+                           </top>
+                           <center>
+                              <PieChart fx:id="pcThongKe" prefHeight="448.0" prefWidth="458.0" BorderPane.alignment="CENTER">
+                                 <BorderPane.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </BorderPane.margin></PieChart>
+                           </center>
+                        </BorderPane>
+                     </children></AnchorPane>
             </content>
           </Tab>
             <Tab text="📓">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <BorderPane layoutX="94.0" layoutY="87.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <top>
+                              <HBox alignment="CENTER" prefWidth="200.0" spacing="20.0" BorderPane.alignment="CENTER">
+                                 <children>
+                                    <Label text="NGÂN SÁCH" textFill="FORESTGREEN">
+                                       <font>
+                                          <Font name="System Bold" size="36.0" />
+                                       </font>
+                                    </Label>
+                                    <Button mnemonicParsing="false" onAction="#handleThemNganSach" style="-fx-background-radius: 30; -fx-background-color: white; -fx-border-color: forestgreen; -fx-border-radius: 30; -fx-border-width: 2;" text="THÊM" textAlignment="CENTER" textFill="FORESTGREEN">
+                                       <font>
+                                          <Font name="System Bold" size="20.0" />
+                                       </font>
+                                    </Button>
+                                 </children>
+                                 <BorderPane.margin>
+                                    <Insets bottom="20.0" top="20.0" />
+                                 </BorderPane.margin>
+                              </HBox>
+                           </top>
+                           <center>
+                              <ScrollPane hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: transparent;" BorderPane.alignment="CENTER">
+                                 <content>
+                                    <TilePane fx:id="tpNganSach" prefHeight="587.0" prefWidth="463.0" />
+                                 </content>
+                              </ScrollPane>
+                           </center>
+                        </BorderPane>
+                     </children></AnchorPane>
                </content>
             </Tab>
             <Tab text="👤">
