--- a/project/MoneyGrower/src/application/main.fxml
+++ b/project/MoneyGrower/src/application/main.fxml
@@ -215,7 +215,7 @@
                                     <Font size="20.0" />
                                  </font>
                               </Label>
-                              <Label text="THÔNG TIN NGƯỜI DÙNG" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="1">
+                              <Label text="THÔNG TIN NGƯỜI DÙNG" textFill="FORESTGREEN" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="1">
                                  <font>
                                     <Font name="System Bold" size="24.0" />
                                  </font>
@@ -225,12 +225,12 @@
                                     <Insets bottom="10.0" left="-40.0" right="-40.0" />
                                  </GridPane.margin>
                               </Separator>
-                              <Separator orientation="VERTICAL" prefHeight="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="4">
+                              <Separator orientation="VERTICAL" prefHeight="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="5">
                                  <GridPane.margin>
                                     <Insets bottom="-50.0" right="10.0" top="-50.0" />
                                  </GridPane.margin>
                               </Separator>
-                              <Separator orientation="VERTICAL" prefHeight="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1" GridPane.rowSpan="4">
+                              <Separator orientation="VERTICAL" prefHeight="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1" GridPane.rowSpan="5">
                                  <GridPane.margin>
                                     <Insets bottom="-50.0" left="10.0" top="-50.0" />
                                  </GridPane.margin>
