--- a/project/MoneyGrower/src/application/main.fxml
+++ b/project/MoneyGrower/src/application/main.fxml
@@ -103,6 +103,11 @@
                                                 <Font name="System Bold" size="18.0" />
                                              </font>
                                           </Button>
+                                          <Button mnemonicParsing="false" onAction="#handleXuatPDF" prefHeight="41.0" prefWidth="120.0" style="-fx-border-color: transparent; -fx-background-color: darkorange; -fx-background-radius: 10;" text="XUẤT PDF" textFill="WHITE">
+                                             <font>
+                                                <Font name="System Bold" size="18.0" />
+                                             </font>
+                                          </Button>
                                        </children>
                                        <VBox.margin>
                                           <Insets top="10.0" />
